--- a/VLaboralWeb/App/Home/Partials/home.html
+++ b/VLaboralWeb/App/Home/Partials/home.html
@@ -1,14 +1,5 @@
-﻿<h1>Soy el Home</h1>
+﻿<div ui-view="menuHome@"></div>
 
-<md-content md-theme="docs-dark" layout-gt-sm="row" layout-padding>
-    <div>
-        <md-input-container>
-            <label>Title</label>
-            <input ng-model="user.title">
-        </md-input-container>
-        <md-input-container>
-            <label>Email</label>
-            <input ng-model="user.email" type="email">
-        </md-input-container>
-    </div>
-</md-content>
+<div ui-view="infoHome@"></div>
+
+<div ui-view="ofertasHome@"></div>
