--- a/VLaboralWeb/App/Home/Partials/homeMenu.html
+++ b/VLaboralWeb/App/Home/Partials/homeMenu.html
@@ -1,1 +1,21 @@
 ﻿<h1>Menu del Home</h1>
+
+<md-button class="md-raised md-primary" ui-sref="registroProfesional">
+    Registrar Profesional
+</md-button>
+
+<md-button class="md-raised md-warn" ui-sref="registroEmpresa">
+    Registrar Empresa
+</md-button>
+
+<md-button class="md-raised md-warn" ui-sref="login">
+    Login
+</md-button>
+
+<md-button class="md-raised md-primary" ui-sref="solicitud">
+    Solicitud de Confirmacion de Cuenta
+</md-button>
+
+
+
+
