cambios echos, En app/Home, carpetas agregadas: Fonts, Img

--- a/VLaboralWeb/App/Home/Partials/home.html
+++ b/VLaboralWeb/App/Home/Partials/home.html
@@ -1,5 +1,3 @@
-﻿<div ui-view="menuHome@"></div>
-
-<div ui-view="infoHome@"></div>
+﻿<div ui-view="infoHome@"></div>
 
 <div ui-view="ofertasHome@"></div>
