--- a/VLaboralWeb/App/Home/Partials/homeInfo.html
+++ b/VLaboralWeb/App/Home/Partials/homeInfo.html
@@ -1,4 +1,4 @@
-﻿<h1>Info Home</h1>
+﻿<!--<h1>Info Home</h1>
 
 <md-content md-theme="docs-dark" layout-gt-sm="row" layout-padding>
     <div>
@@ -11,4 +11,70 @@
             <input ng-model="user.email" type="email">
         </md-input-container>
     </div>
-</md-content>
+</md-content>-->
+
+<section class="home">
+    <header>
+        <a href="index.html">UN MUNDO</a>
+        <ul>
+            <a ui-sref="registroEmpresa"><li>Registra tu empresa</li></a>
+            <a ui-sref="registroProfesional"><li>¿ Eres un profesional?</li></a>
+            <a ui-sref="login"><li>INGRESAR</li></a>
+        </ul>
+    </header>
+    
+    <div class="h_container">
+        <h1>NOSTROS SOMOS <span>UN MUNDO.</span></h1>
+    </div>
+    <div class="e_content">
+        <article>
+            <span class="icon-image icono"></span>
+            <h1><span>FÁCIL</span> MANEJO</h1>
+            <hr>
+            <p>Una interfaz super intuitiva para seleccionar al profesional adecuado.</p>
+        </article>
+
+        <article>
+            <span class="icon-stack icono"></span>
+            <h1><span>DIFERENTES</span> OPCIONES</h1>
+            <hr>
+            <p>Gran cantidad de personas capacitadas en distintas áreas de trabajo.</p>
+        </article>
+
+        <article>
+            <span class="icon-profile icono"></span>
+            <h1><span>INFORMACIÓN</span> AL ALCANCE</h1>
+            <hr>
+            <p>Una visualizacion completa de toda la información de cada profesional.</p>
+        </article>
+
+        <article>
+            <span class="icon-spinner10 icono"></span>
+            <h1><span>ACTUALIZACIÓN</span> CONSTANTE</h1>
+            <hr>
+            <p>Constante flujo de ofertas de todo tipo esperando a ser contratadas.</p>
+        </article>
+    </div>
+</section>
+<!-- FIN DE PANTALLA DE INICIO-->
+	<!-- COMIENZO DE SECCION PARA ELEGIR TIPO DE REGISTRO (PROFESIONAL/EMPRESA)-->
+<section class="t_elegir">
+    <h1>LA CONEXIÓN ENTRE <span>LA EMPRESA Y EL PROFESIONAL</span></h1>
+    <hr>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut ducimus esse modi accusantium reiciendis dolorem. Quae nemo suscipit neque porro ipsam laborum quas debitis facere cum maiores? Rerum, quisquam.</p>
+</section>
+
+<section class="elegir">
+    <div class="e_prof">
+        <h1>¿ Eres un <span>profesional</span> y buscas ofertas laborales?</h1>
+        <h3>Registrate y comienza elegir las mejores ofertas laborales.</h3>
+        <a ui-sref="registroProfesional">COMENZAR</a>
+    </div>
+
+    <div class="e_empr">
+        <h1>¿ Buscas profesionales para tu <span>empresa</span>?</h1>
+        <h3>Encuentra los profesionales mas aptos para tu empresa</h3>
+        <a ui-sref="registroEmpresa">COMENZAR</a>
+    </div>
+</section>
+<!-- COMIENZO DE SECCION PARA ELEGIR TIPO DE REGISTRO (PROFESIONAL/EMPRESA)-->
