--- a/VLaboralWeb/App/Home/Partials/homeMenu.html
+++ b/VLaboralWeb/App/Home/Partials/homeMenu.html
@@ -1,4 +1,4 @@
-﻿<h1>Menu del Home</h1>
+﻿<!--<h1>Menu del Home</h1>
 
 <md-button class="md-raised md-primary" ui-sref="registroProfesional">
     Registrar Profesional
@@ -14,8 +14,16 @@
 
 <md-button class="md-raised md-primary" ui-sref="solicitud">
     Solicitud de Confirmacion de Cuenta
-</md-button>
+</md-button>-->
 
+<!--<header>
+    <a href="index.html">UN MUNDO</a>
+    <ul>
+        <a ui-sref="registroEmpresa"><li>Registra tu empresa</li></a>
+        <a ui-sref="registroProfesional"><li>¿ Eres un profesional?</li></a>
+        <a ui-sref="login"><li>INGRESAR</li></a>
+    </ul>
+</header>-->
 
 
 
