--- a/VLaboralWeb/App/Ofertas/Partials/ofertasList.html
+++ b/VLaboralWeb/App/Ofertas/Partials/ofertasList.html
@@ -1,1 +1,116 @@
-﻿<h1>Listado de Ofertas</h1>
+﻿	<!-- COMIENZO SECCION LISTA DE OFERTAS -->
+<section class="ofertas">
+
+
+
+    <article>
+        <div class="logo_ofer">
+            <img src="img/logo.png">
+            <h2>nombre empresa</h2>
+        </div>
+
+        <div class="info_ofer">
+            <h1>DISEÑO GRAFICO Y EDICIÓN DE IMAGEN.</h1>
+
+            <hr>
+            <div class="d_ofer">
+                <h4>fecha de convocatoria: 07/04/2016 a 21/04/2016</h4> <h5>PUBLICO</h5>
+            </div>
+            <h3>Insertar en esta seccion una breve descripción de la oferta laboral disponible, en la que se especifica la area en la que se desempeñara el posible futuro empleado que aplique para la misma...</h3>
+            <a href="#" class="md-primary">ver mas</a>
+        </div>
+    </article>
+
+
+    <article>
+        <div class="logo_ofer">
+            <img src="img/logo2.png">
+            <h2>nombre empresa</h2>
+        </div>
+
+        <div class="info_ofer">
+            <h1>MARKETING DIGITAL, SOCIAL MANAGMENT.</h1>
+
+            <hr>
+            <div class="d_ofer">
+                <h4>fecha de convocatoria: 07/04/2016 a 21/04/2016</h4> <h5>PUBLICO</h5>
+            </div>
+            <h3>Insertar en esta seccion una breve descripción de la oferta laboral disponible, en la que se especifica la area en la que se desempeñara el posible futuro empleado que aplique para la misma...</h3>
+            <a href="#">ver mas</a>
+        </div>
+    </article>
+
+
+    <article>
+        <div class="logo_ofer">
+            <img src="img/logo3.png">
+            <h2>nombre empresa</h2>
+        </div>
+
+        <div class="info_ofer">
+            <h1>DESARROLLO DE APLICACIONES ANDROID.</h1>
+
+            <hr>
+            <div class="d_ofer">
+                <h4>fecha de convocatoria: 07/04/2016 a 21/04/2016</h4> <h5>PRIVADO</h5>
+            </div>
+            <h3>Insertar en esta seccion una breve descripción de la oferta laboral disponible, en la que se especifica la area en la que se desempeñara el posible futuro empleado que aplique para la misma...</h3>
+            <a href="#">ver mas</a>
+        </div>
+    </article>
+
+
+    <article>
+        <div class="logo_ofer">
+            <img src="img/logo4.png">
+            <h2>nombre empresa</h2>
+        </div>
+
+        <div class="info_ofer">
+            <h1>JAVASCRIPT Y MANEJO DE NODE JS.</h1>
+
+            <hr>
+            <div class="d_ofer">
+                <h4>fecha de convocatoria: 07/04/2016 a 21/04/2016</h4> <h5>PUBLICO</h5>
+            </div>
+            <h3>Insertar en esta seccion una breve descripción de la oferta laboral disponible, en la que se especifica la area en la que se desempeñara el posible futuro empleado que aplique para la misma...</h3>
+            <a href="#">ver mas</a>
+        </div>
+    </article>
+
+    <article>
+        <div class="logo_ofer">
+            <img src="img/logo2.png">
+            <h2>nombre empresa</h2>
+        </div>
+
+        <div class="info_ofer">
+            <h1>MARKETING DIGITAL, SOCIAL MANAGMENT.</h1>
+
+            <hr>
+            <div class="d_ofer">
+                <h4>fecha de convocatoria: 07/04/2016 a 21/04/2016</h4> <h5>PUBLICO</h5>
+            </div>
+            <h3>Insertar en esta seccion una breve descripción de la oferta laboral disponible, en la que se especifica la area en la que se desempeñara el posible futuro empleado que aplique para la misma...</h3>
+            <a href="#">ver mas</a>
+        </div>
+    </article>
+
+    <article>
+        <div class="logo_ofer">
+            <img src="img/logo.png">
+            <h2>nombre empresa</h2>
+        </div>
+
+        <div class="info_ofer">
+            <h1>DISEÑO GRAFICO Y EDICIÓN DE IMAGEN.</h1>
+
+            <hr>
+            <div class="d_ofer">
+                <h4>fecha de convocatoria: 07/04/2016 a 21/04/2016</h4> <h5>PRIVADO</h5>
+            </div>
+            <h3>Insertar en esta seccion una breve descripción de la oferta laboral disponible, en la que se especifica la area en la que se desempeñara el posible futuro empleado que aplique para la misma...</h3>
+            <a href="#">ver mas</a>
+        </div>
+    </article>
+</section>
