agrego alta de  puestos, de ofertas, con que  tipos de contrato y tipos de disponibilidad

--- a/VLaboralWeb/App/Ofertas/Partials/ofertasAdd.html
+++ b/VLaboralWeb/App/Ofertas/Partials/ofertasAdd.html
@@ -60,7 +60,7 @@
 <nav mfb-menu position="br" effect="zoomin" label="Herramientas"
      active-icon="fa fa-times" resting-icon="fa fa-plus"
      toggling-method="hover">
-    <button mfb-button icon="fa fa-floppy-o" label="Guardar Oferta" ng-click="ofertaSave()">
+    <button mfb-button icon="fa fa-floppy-o" label="Guardar Oferta" ng-click="ofertaSave(oferta)">
         <md-icon> face </md-icon>
     </button>
     <button mfb-button icon="fa fa-user-plus" label="Agregar Puesto" ng-click="openPuestoAdd()"></button>
