--- a/VLaboralWeb/App/Puestos/Partials/puestosAdd.html
+++ b/VLaboralWeb/App/Puestos/Partials/puestosAdd.html
@@ -21,7 +21,7 @@
                 <div flex="25">
                     <md-input-container>
                         <label>Cantidad de Vacantes</label>
-                        <input type="number" ng-model="puesto.CantidadDeVacantes" class="form-control md-input" />
+                        <input type="number" ng-model="puesto.Vacantes" class="form-control md-input" />
                     </md-input-container>
                 </div>
                 <div flex="25">
