--- a/VLaboralWeb/App/Seguridad/Partials/login.html
+++ b/VLaboralWeb/App/Seguridad/Partials/login.html
@@ -4,6 +4,6 @@
     Entrar como Empresa
 </md-button>
 
-<md-button class="md-raised md-primary" ui-sref="profesional.perfil">
+<md-button class="md-raised md-primary" ui-sref="profesional.perfil({idPro:1})">
     Entrar como Profesional
 </md-button>
