Agregado chips para habilidades con sugerencias en perfil de profesional

--- a/VLaboralWeb/App/Home/Partials/homeInfo.html
+++ b/VLaboralWeb/App/Home/Partials/homeInfo.html
@@ -3,9 +3,9 @@
     <header>
         <a href="index.html">UN MUNDO</a>
         <ul>
-            <a href="#"><li>Registra tu empresa</li></a>
-            <a href="#"><li>¿ Eres un profesional?</li></a>
-            <a href="login.html"><li>INGRESAR</li></a>
+            <a ui-sref="registroEmpresa"><li>Registra tu empresa</li></a>
+            <a ui-sref="registroProfesional"><li>¿ Eres un profesional?</li></a>
+            <a ui-sref="login"><li>INGRESAR</li></a>
         </ul>
     </header>
     <div class="h_container">
@@ -53,13 +53,13 @@
     <div class="e_prof">
         <h1>¿ Eres un <span>profesional</span> y buscas ofertas laborales?</h1>
         <h3>Registrate y comienza elegir las mejores ofertas laborales.</h3>
-        <a href="#">COMENZAR</a>
+        <a ui-sref="registroProfesional">COMENZAR</a>
     </div>
 
     <div class="e_empr">
         <h1>¿ Buscas profesionales para tu <span>empresa</span>?</h1>
         <h3>Encuentra los profesionales mas aptos para tu empresa</h3>
-        <a href="#">COMENZAR</a>
+        <a ui-sref="registroEmpresa">COMENZAR</a>
     </div>
 </section>
 <!-- COMIENZO DE SECCION PARA ELEGIR TIPO DE REGISTRO (PROFESIONAL/EMPRESA)-->
